# pyseswrapper

./: .gitignore  README.rst  pyproject.toml
pyseswrapper/: __init__.py  ffi.py  struct_bridge.py
pyseswrapper/headers/: seswrapper.h
tests/: test_pyseswrapper.py
