[tool.poetry]
name = "pyseswrapper"
version = "0.1.0"
description = ""
authors = ["Conrad Stansbury <chstansbury@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cffi = "^1.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
